--- a/app-about-company.properties
+++ b/app-about-company.properties
@@ -5,7 +5,7 @@ text.copyright=o7planning.org
 # ===============================
 
 #spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.driverClassName=com.mysql.jdbc.Driver
+spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
 
 spring.datasource.url=jdbc:mysql://localhost:3306/aboutcompany
 spring.datasource.username=admin
